fixed the spacing problem in the testimonies, also fixed z-index issues

--- a/smallscreen.css
+++ b/smallscreen.css
@@ -136,13 +136,17 @@ html,body{
     margin-bottom: 0;
     padding-bottom: 5%;
     text-align: center;
+    z-index:1;
 }
+
+
 
 #in_quotes, #out_quotes{
     position: absolute;
     max-height: 100px;
     max-width: 100px;
     opacity: 0.1;
+    z-index: 0;
 }
 
 #in_quotes{
@@ -177,6 +181,7 @@ html,body{
 .testi_flexbox{
     padding: 10% 5%;
 }
+
 
 
 
