--- a/widescreen.css
+++ b/widescreen.css
@@ -152,9 +152,11 @@ html,body{
     height: 150px;
     overflow-y: scroll;
     font-size: 20px;
-    padding: 5% 8%;
-    padding-bottom: 5%;
+    margin: 5% 8%;
+    margin-bottom: 0;
+    padding: 0 2%;
     text-align: center;
+    z-index: 2;
 }
 
 #testi_message_span{
@@ -168,7 +170,8 @@ html,body{
     position: absolute;
     max-height: 120px;
     max-width: 120px;
-    opacity: 0.2;
+    opacity: 0.1;
+    z-index: 1;
 }
 
 #in_quotes{
@@ -184,7 +187,6 @@ html,body{
 
 .testi_sender{
     text-align:center;
-    padding-top: 5%;
 }
 
 
@@ -208,6 +210,16 @@ html,body{
     align-items: center; */
     width: 700px;
     margin: auto;
+}
+
+.carousel-control-next{
+    width: 10%;
+    padding-right: 5%;
+}
+
+.carousel-control-prev{
+    width: 10%;
+    padding-left: 5%;
 }
 
 
@@ -380,3 +392,25 @@ html,body{
     display: block;
     margin-top: -2px;
 }
+
+/* scrollbar stuff */
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: transparent; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
